<resources>
    <string name="app_name">AndroidIntegrador</string>
    <string name="prefs_file">android_tp_integrador.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">1:62704752521:android:f35a820d5d159a0013b358</string>
    <string name="title_activity_denuncia_detail_host">DenunciaDetailHostActivity</string>
    <string name="title_denuncia_list">Denuncias</string>
    <string name="title_denuncia_detail">Denuncia Detail</string>
    <string name="google_maps_key">AIzaSyAq23o3EQDkD1C28a5I42DIZ5Iy_5z4PU0</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="saveText">Guardar</string>
    <string name="filterState">Filtrar por estado:</string>
    <string name="writeComment">Escribe un comentario...</string>

    <!-- activity_auth -->
    <string name="menuHome">Inicio</string>
    <string name="menuList">Denuncias</string>
    <string name="menuNew">Nueva Denuncia</string>
    <string name="menuUser">Perfil</string>

    <!-- activity_auth -->
    <string name="textLogo">Protección Animal</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="nameInput">Nombre</string>
    <string name="lastnameInput">Apellido</string>
    <string name="phoneInput">Teléfono</string>
    <string name="passwordInput">Contraseña</string>
    <string name="rePasswordInput">Ingrese la contraseña nuevamente</string>
    <string name="roleTextView">Rol:</string>
    <string name="denuncianteRadioButton">Denunciante</string>

    <!-- activity_home -->
    <string name="nuevaDenunciaButton">Nueva denuncia</string>
    <string name="denunciasButton">Denuncias</string>
    <string name="logoutButton">Cerrar sesión</string>

    <!-- denuncias -->
    <string name="editText">Editar</string>
    <string name="deleteText">Eliminar</string>
    <string name="assignedText">Asignado</string>
    <string name="finishText">Finalizar</string>

    <!-- nueva_denuncia -->
    <string name="titleText">Título</string>
    <string name="descriptionText">Descripción</string>
    <string name="backText">Volver</string>
    <string name="cancelText">Cancelar</string>
    <string name="nextText">Siguiente</string>
    <string name="openCameraText">Cámara</string>
    <string name="openGalleryText">Galería</string>
    <string name="ubicationText">Ubicación</string>
    <string name="searchText">Buscar</string>
    <string name="endText">Finalizar</string>
    <string name="imageText">Imágenes</string>
    <string name="assignText">Asignar</string>
    <string name="dateText">Fecha</string>
    <string name="priorityText">Prioridad</string>
    <string name="stateText">Estado</string>
    <string name="detailText">Detalle</string>

    <!-- activity_profile -->
    <string name="userRoleTextView2">Rol:</string>
    <string name="instructionText">A continuación, puede modificar sus datos:</string>
</resources>