<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/locationActivity"
    android:background="@color/background"
    android:textColor="@color/colorText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

            <EditText
                android:id="@+id/textUbication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:ems="10"
                android:hint="@string/ubicationText" />
            <!-- Botón para iniciar la búsqueda -->
            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryButton"
                android:textColor="@color/colorText"
                android:padding="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/searchText" />

        <!-- Contenedor del mapa -->
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginBottom="30dp" />

        <!-- Botones de navegación -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryButton"
                android:textColor="@color/colorText"
                android:padding="20dp"
                android:text="@string/backText" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryButton"
                android:textColor="@color/colorText"
                android:padding="20dp"
                android:text="@string/endText"
                android:layout_marginStart="32dp" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="16dp" />

    <include
        layout="@layout/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
</LinearLayout>

