<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:textColor="@color/colorText"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tituloEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:ems="10"
            android:hint="@string/titleText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/descripcionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:ems="10"
            android:hint="@string/descriptionText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- TextView para el título "Rol:" -->
        <TextView
            android:id="@+id/roleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priorityText"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" />

        <!-- RadioGroup para los RadioButtons -->
        <RadioGroup
            android:id="@+id/priorityRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp">

            <!-- RadioButton para "Baja" -->
            <RadioButton
                android:id="@+id/bajaRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Baja"
                android:textColor="@color/colorText"
                android:checked="true"
                android:buttonTint="@color/colorPrimary" />

            <!-- RadioButton para "Media" -->
            <RadioButton
                android:id="@+id/mediaRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Media"
                android:textColor="@color/colorText"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginStart="16dp" />

            <!-- RadioButton para "Alta" -->
            <RadioButton
                android:id="@+id/altaRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alta"
                android:textColor="@color/colorText"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginStart="16dp" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorSecondaryButton"
                android:textColor="@color/colorText"
                android:text="@string/cancelText" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <Button
                android:id="@+id/siguienteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryButton"
                android:textColor="@color/colorText"
                android:text="@string/nextText" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="16dp" />

    <include
        layout="@layout/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
</LinearLayout>