<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/photoActivity"
        android:background="@color/background"
        android:textColor="@color/colorText">

    <LinearLayout
        android:id="@+id/photoActivity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

        <!-- Contenedor para los botones -->
        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/openCameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimaryButton"
                android:textColor="@color/colorText"
                android:drawableStart="@drawable/icon_camera"
                android:drawableTint="@color/textColor"
                android:drawablePadding="5dp"
                android:padding="20dp"
                android:text="@string/openCameraText" />

            <Button
                android:id="@+id/openGaleryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryButton"
                android:textColor="@color/colorText"
                android:drawableStart="@drawable/icon_photo"
                android:drawableTint="@color/textColor"
                android:drawablePadding="5dp"
                android:padding="20dp"
                android:text="@string/openGalleryText" />
        </LinearLayout>


        <!-- Placeholder de imágen -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/main_photo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            tools:ignore="MissingConstraints" />

        <!-- Contenedor de las imágenes -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/imageContainer"
            app:layout_constraintTop_toBottomOf="@+id/buttonContainer2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Primera imagen -->
            <FrameLayout
                android:id="@+id/firstImageFrame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintWidth_percent="0.49"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/firstImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/deleteImageButton1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/delete"
                    android:visibility="gone"
                    android:layout_gravity="top|end"
                    android:contentDescription="Eliminar imagen" />
            </FrameLayout>

            <!-- Segunda imagen -->
            <FrameLayout
                android:id="@+id/secondImageFrame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintStart_toEndOf="@id/firstImageFrame"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/secondImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/deleteImageButton2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/delete"
                    android:visibility="gone"
                    android:layout_gravity="top|end"
                    android:contentDescription="Eliminar imagen" />
            </FrameLayout>

            <!-- Tercera imagen -->
            <FrameLayout
                android:id="@+id/thirdImageFrame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintStart_toEndOf="@id/firstImageFrame"
                app:layout_constraintTop_toBottomOf="@id/secondImageFrame">

                <ImageView
                    android:id="@+id/thirdImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/deleteImageButton3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/delete"
                    android:visibility="gone"
                    android:layout_gravity="top|end"
                    android:contentDescription="Eliminar imagen" />
            </FrameLayout>

            <!-- Cuarta imagen -->
            <FrameLayout
                android:id="@+id/fourthImageFrame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintStart_toEndOf="@id/secondImageFrame"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/fourthImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/deleteImageButton4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/delete"
                    android:visibility="gone"
                    android:layout_gravity="top|end"
                    android:contentDescription="Eliminar imagen" />
            </FrameLayout>

            <!-- Quinta imagen -->
            <FrameLayout
                android:id="@+id/fifthImageFrame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintStart_toEndOf="@id/thirdImageFrame"
                app:layout_constraintTop_toBottomOf="@id/fourthImageFrame">

                <ImageView
                    android:id="@+id/fifthImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/deleteImageButton5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/delete"
                    android:visibility="gone"
                    android:layout_gravity="top|end"
                    android:contentDescription="Eliminar imagen" />
            </FrameLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>


<!--        <Space-->
<!--            android:id="@+id/spaceBottom"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="16dp"/>-->

        <!-- Contenedor para los botones 2 -->
        <LinearLayout
            android:id="@+id/buttonContainer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/previousBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/colorSecondaryButton"
                android:textColor="@color/colorText"
                android:padding="20dp"
                android:text="@string/backText" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryButton"
                android:textColor="@color/colorText"
                android:padding="20dp"
                android:text="@string/nextText" />
        </LinearLayout>



    </LinearLayout>


    <Space
        android:id="@+id/space2Bottom"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="16dp"/>

    <include
        layout="@layout/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
